--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^5.1.0"
+    "cypress": "^5.1.0",
+    "mocha": "^8.1.3"
   }
 }
