--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^5.1.0",
     "mocha": "^8.1.3"
+  },
+  "devDependencies": {
+    "cypress": "^5.2.0"
   }
 }
