--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-- name: Conduit.Cypress.E2ETests
+name: Conduit Cypress e2e tests
 on: [push]
 jobs:
   cypress-run:
@@ -13,5 +13,5 @@ jobs:
         with:
           record: true
         env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CYPRESS_RECORD_KEY: ${{ secrets.cypressRecordKey }}
+          GITHUB_TOKEN: ${{ secrets.token }}
