--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
           record: true
           browser: chrome
         env:
-          CYPRESS_RECORD_KEY: ${{ secrets.cypressRecordKey }}
-          GITHUB_TOKEN: ${{ secrets.token }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
