--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "Conduit.Cypress.E2ETests",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run --browser chrome",
-    "cypress:headless": "cypress run --headless --browser chrome",
-    "cypress:record": "cypress run --record --key d7cf1058-7f35-4029-8db0-b05db857dd84 --browser chrome"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "mocha": "^8.1.3"
-  },
-  "devDependencies": {
-    "cypress": "^5.6.0"
-  }
+	"name": "Conduit.Cypress.E2ETests",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"cypress:open": "cypress open",
+		"cypress:run": "cypress run --browser chrome",
+		"cypress:headless": "cypress run --headless --browser chrome",
+		"cypress:record": "cypress run --record --key d7cf1058-7f35-4029-8db0-b05db857dd84 --headless --browser chrome"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"mocha": "^8.1.3"
+	},
+	"devDependencies": {
+		"cypress": "^5.6.0"
+	}
 }
