Add scheduled run

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: Conduit Cypress e2e tests
-on: [push]
+on:
+  push:
+  schedule:
+  - cron: "0 0 * * *"  
 jobs:
   cypress-run:
     name: Cypress run
