--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
 		"cypress:record": "cypress run --record --headless --browser chrome"
 	},
 	"keywords": [],
-	"author": "developer",
+	"author": "test developer",
 	"license": "ISC",
 	"dependencies": {
 		"mocha": "^8.1.3"
 	},
 	"devDependencies": {
-		"cypress": "^6.2.0"
+		"cypress": "^6.2.0",
+		"minimatch": ">=3.0.5"
 	}
 }
