--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"devDependencies": {
 		"cypress": "^6.2.0",
-		"minimatch": ">=3.0.5"
+		"minimatch": ">=3.0.5",
+		"ansi-regex": ">=5.0.1"
 	}
 }
